--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>A floral, solar and voluptuous interpretation composed by Olivier Polge, 
         Perfumer-Creator for the House of CHANEL.</p>
         <p class="price">$149.99<span>$169.99</span></p>
-        <button><img src="./images/icon-cart.svg">Add to Cart</button>
+        <button><img src="./images/icon-cart.svg" alt="cart icon">Add to Cart</button>
       </div>
     </div>
   </div>
