--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io/challenges/product-preview-card-component-GO7UmttRfa/hub" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Matej Hrovat</a>.
   </div>
 </body>
